--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "devDependencies": {
     "@faker-js/faker": "^8.0.2",
     "jest": "^29.5.0"
+  },
+  "dependencies": {
+    "chalk": "^5.2.0"
   }
 }
